azureps-cmdlets-docs/ServiceManagement/Azure.StorSimple/v3.0.0/Azure.StorSimple.md
---
Module Name: Azure.StorSimple
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link: {{Please enter FwLink manually}}
Help Version: {{Please enter version of help manually (X.X.X.X) format}}
Locale: en-US
---

# Azure.StorSimple Module
## Description
This topic displays help topics for the Azure StorSimple Cmdlets.

Migration cmdlets appear in a separate topic.

The .dll file for this module is *Microsoft.WindowsAzure.Commands.StorSimple.dll*.

## Azure.StorSimple Cmdlets
### [Confirm-AzureStorSimpleLegacyVolumeContainerStatus](./Confirm-AzureStorSimpleLegacyVolumeContainerStatus.md)
Initiates the commit or rollback of the volume containers that are migrated.


### [Get-AzureStorSimpleAccessControlRecord](./Get-AzureStorSimpleAccessControlRecord.md)
Gets access control records in a service configuration.


### [Get-AzureStorSimpleDeviceBackupPolicy](./Get-AzureStorSimpleDeviceBackupPolicy.md)
Gets backup policies.


### [Get-AzureStorSimpleDeviceBackup](./Get-AzureStorSimpleDeviceBackup.md)
Gets backups from a device.


### [Get-AzureStorSimpleDeviceConnectedInitiator](./Get-AzureStorSimpleDeviceConnectedInitiator.md)
Gets the iSCSI connections available for a StorSimple device.


### [Get-AzureStorSimpleDeviceVolumeContainer](./Get-AzureStorSimpleDeviceVolumeContainer.md)
Gets volume containers on a device.


### [Get-AzureStorSimpleDeviceVolume](./Get-AzureStorSimpleDeviceVolume.md)
Gets volumes on a device.


### [Get-AzureStorSimpleDevice](./Get-AzureStorSimpleDevice.md)
Gets devices attached to the resource.


### [Get-AzureStorSimpleFailoverVolumeContainers](./Get-AzureStorSimpleFailoverVolumeContainers.md)
Gets the volume container groups for device failover.


### [Get-AzureStorSimpleJob](./Get-AzureStorSimpleJob.md)
Gets StorSimple jobs.


### [Get-AzureStorSimpleLegacyVolumeContainerConfirmStatus](./Get-AzureStorSimpleLegacyVolumeContainerConfirmStatus.md)
Gets the status of a commit or rollback operation.


### [Get-AzureStorSimpleLegacyVolumeContainerMigrationPlan](./Get-AzureStorSimpleLegacyVolumeContainerMigrationPlan.md)
Gets migration plans for legacy containers.


### [Get-AzureStorSimpleLegacyVolumeContainerStatus](./Get-AzureStorSimpleLegacyVolumeContainerStatus.md)
Gets the migration status of the volume containers.


### [Get-AzureStorSimpleResourceContext](./Get-AzureStorSimpleResourceContext.md)
Gets the current resource context.


### [Get-AzureStorSimpleResource](./Get-AzureStorSimpleResource.md)
Gets all resources that you created.


### [Get-AzureStorSimpleStorageAccountCredential](./Get-AzureStorSimpleStorageAccountCredential.md)
Gets credentials for storage accounts.


### [Get-AzureStorSimpleTask](./Get-AzureStorSimpleTask.md)
Gets status of a task on a StorSimple device.


### [Import-AzureStorSimpleLegacyApplianceConfig](./Import-AzureStorSimpleLegacyApplianceConfig.md)
Imports a configuration file.


### [Import-AzureStorSimpleLegacyVolumeContainer](./Import-AzureStorSimpleLegacyVolumeContainer.md)
Starts the migration of volume containers.


### [New-AzureStorSimpleAccessControlRecord](./New-AzureStorSimpleAccessControlRecord.md)
Creates an access control record.


### [New-AzureStorSimpleDeviceBackupPolicy](./New-AzureStorSimpleDeviceBackupPolicy.md)
Creates a backup policy.


### [New-AzureStorSimpleDeviceBackupScheduleAddConfig](./New-AzureStorSimpleDeviceBackupScheduleAddConfig.md)
Creates a backup schedule configuration object.


### [New-AzureStorSimpleDeviceBackupScheduleUpdateConfig](./New-AzureStorSimpleDeviceBackupScheduleUpdateConfig.md)
Creates a backup schedule update configuration object.


### [New-AzureStorSimpleDeviceVolumeContainer](./New-AzureStorSimpleDeviceVolumeContainer.md)
Creates a volume container.


### [New-AzureStorSimpleDeviceVolume](./New-AzureStorSimpleDeviceVolume.md)
Creates a volume in a specified volume container.


### [New-AzureStorSimpleInlineStorageAccountCredential](./New-AzureStorSimpleInlineStorageAccountCredential.md)
Creates an inline storage account credential.


### [New-AzureStorSimpleNetworkConfig](./New-AzureStorSimpleNetworkConfig.md)
Prepares a network configuration object.


### [New-AzureStorSimpleStorageAccountCredential](./New-AzureStorSimpleStorageAccountCredential.md)
Adds an Azure storage access credential.


### [New-AzureStorSimpleVirtualDevice](./New-AzureStorSimpleVirtualDevice.md)
Creates a virtual StorSimple device.


### [Remove-AzureStorSimpleAccessControlRecord](./Remove-AzureStorSimpleAccessControlRecord.md)
Deletes an access control record from the service configuration.


### [Remove-AzureStorSimpleDeviceBackupPolicy](./Remove-AzureStorSimpleDeviceBackupPolicy.md)
Removes an existing backup policy.


### [Remove-AzureStorSimpleDeviceBackup](./Remove-AzureStorSimpleDeviceBackup.md)
Deletes a backup object.


### [Remove-AzureStorSimpleDeviceVolumeContainer](./Remove-AzureStorSimpleDeviceVolumeContainer.md)
Removes a volume container from a StorSimple device.


### [Remove-AzureStorSimpleDeviceVolume](./Remove-AzureStorSimpleDeviceVolume.md)
Removes a volume from a StorSimple device.


### [Remove-AzureStorSimpleStorageAccountCredential](./Remove-AzureStorSimpleStorageAccountCredential.md)
Deletes an existing storage account credential.


### [Select-AzureStorSimpleResource](./Select-AzureStorSimpleResource.md)
Sets a resource as the current resource.


### [Set-AzureStorSimpleAccessControlRecord](./Set-AzureStorSimpleAccessControlRecord.md)
Updates the IQN of an access control record.


### [Set-AzureStorSimpleDeviceBackupPolicy](./Set-AzureStorSimpleDeviceBackupPolicy.md)
Updates an existing backup policy.


### [Set-AzureStorSimpleDeviceVolume](./Set-AzureStorSimpleDeviceVolume.md)
Updates the properties of an existing volume.


### [Set-AzureStorSimpleDevice](./Set-AzureStorSimpleDevice.md)
Changes the device configuration for a device.


### [Set-AzureStorSimpleStorageAccountCredential](./Set-AzureStorSimpleStorageAccountCredential.md)
Updates an Azure storage access credential.


### [Set-AzureStorSimpleVirtualDevice](./Set-AzureStorSimpleVirtualDevice.md)
Creates or updates the device configuration of a StorSimple virtual device.


### [Start-AzureStorSimpleBackupCloneJob](./Start-AzureStorSimpleBackupCloneJob.md)
Starts a job that clones a backup on a device.


### [Start-AzureStorSimpleDeviceBackupJob](./Start-AzureStorSimpleDeviceBackupJob.md)
Starts a new job that creates a backup from an existing backup policy.


### [Start-AzureStorSimpleDeviceBackupRestoreJob](./Start-AzureStorSimpleDeviceBackupRestoreJob.md)
Starts a job that restores a backup on a StorSimple device.


### [Start-AzureStorSimpleDeviceFailoverJob](./Start-AzureStorSimpleDeviceFailoverJob.md)
Initiates a failover operation of volume container groups.


### [Start-AzureStorSimpleLegacyVolumeContainerMigrationPlan](./Start-AzureStorSimpleLegacyVolumeContainerMigrationPlan.md)
Starts the creation of a migration plan.


### [Stop-AzureStorSimpleJob](./Stop-AzureStorSimpleJob.md)
Stops a StorSimple job.



